# git-churn

./: .gitignore  Cargo.toml  README.md  git-churn  go.mod  go.sum  main.go
.github/workflows/: go.yml  hercules.yml  performance.yml
cmd/: root.go
controllers/: getmetrics.go
docs/: docs.go  swagger.json  swagger.yaml
gitfuncs/: gitdiff.go  gitfuncs.go  gitfuncs_test.go
helper/: logger.go  timings.go  utils.go
matrics/: churnmetrics.go  churnmetrics_test.go  diffmatrics.go  diffmatrics_test.go  diffmetrics.go  diffmetrics_test.go
metrics/: churnmetrics.go  churnmetrics_test.go  diffmetrics.go
print/: printmsg.go
profiling/gogitv4Profiles/: cpu.prof  mem.prof
profiling/gogitv5Profiles/: cpu.prof  mem.prof
src/: main.rs  server.rs
src/git_churn/: metrics.rs  mod.rs
stringutils/: reverse.go  reverse_test.go
templates/: aggregate.html  file.html  index.html
testdata/: file.txt
