[package]
name = "git-churn"
version = "0.1.0"
authors = ["Andy Meneely <andy@se.rit.edu>"]
edition = "2018"
default-run = "git-churn"

[[bin]]
name = "git-churnd"
path = "src/server.rs"

[dependencies]
git2 = "0.8"
clap = "2.33.0"
actix-web = "1.0"
futures = "0.3.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"
